discussion/kv_engine/162026/162026_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

Trace - extra on expel - Toward no expelledItems copy

Change-Id: I2648082a92152979529a8da668e6ff1494a40135

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-09-23 12:53:20.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-23 14:34:07.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34324/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/checkpoint.cc:530:5:
error: use of undeclared identifier "TRACE_EVENT0"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34324/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40323/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0042/0158]: file stats post warmup...(19 ms) SKIPPED


99% tests passed, 1 tests failed out of 410

Total Test time (real) = 668.02 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40323/ )

Timeout of a CTest test 410/410 Test #263: ep_testsuite.ephemeral.comp_passive ...........................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40323/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12768/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:530:5: error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
    TRACE_EVENT0("wip", "C::expelItems");
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:554:9: error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
        TRACE_EVENT0("wip", "C::expelItems::splice");
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:567:9: error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
        TRACE_EVENT0("wip", "C::expelItems::open_and_mem");
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:591:9: error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
        TRACE_EVENT0("wip", "C::expelItems::closed_or_disk");
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12768/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:530:5:
error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12768/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15150/ : FAILURE

ThreadSanitizer issue: lock-order-inversion (potential deadlock) (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x50dfa) in __interceptor_pthread_mutex_lock  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15150/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11558/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2406/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14640/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14382/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2439/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13525/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22650/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
